{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 51,
  "lineage": "09103eb1-44c6-ab27-dddd-9080e4d450af",
  "resources": [
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07453bd750eb55c3b",
            "arn": "arn:aws:ec2:us-east-1:319319364341:elastic-ip/eipalloc-07453bd750eb55c3b",
            "domain": "vpc",
            "id": "eipalloc-07453bd750eb55c3b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-18-211-44-19.compute-1.amazonaws.com",
            "public_ip": "18.211.44.19",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-nat-eip-0"
            },
            "tags_all": {
              "Name": "dev-nat-eip-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084fb58561e15ca0f",
            "arn": "arn:aws:ec2:us-east-1:319319364341:elastic-ip/eipalloc-084fb58561e15ca0f",
            "domain": "vpc",
            "id": "eipalloc-084fb58561e15ca0f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-98-86-24-167.compute-1.amazonaws.com",
            "public_ip": "98.86.24.167",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-nat-eip-1"
            },
            "tags_all": {
              "Name": "dev-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3a2eaf5cb00dfb7",
            "arn": "arn:aws:ec2:us-east-1:319319364341:elastic-ip/eipalloc-0a3a2eaf5cb00dfb7",
            "domain": "vpc",
            "id": "eipalloc-0a3a2eaf5cb00dfb7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-156-176-83.compute-1.amazonaws.com",
            "public_ip": "54.156.176.83",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "dev-nat-eip-2"
            },
            "tags_all": {
              "Name": "dev-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07453bd750eb55c3b",
            "association_id": "eipassoc-0339b442b8afbe2b7",
            "connectivity_type": "public",
            "id": "nat-0e68d906ab6bc3e83",
            "network_interface_id": "eni-0861620e9adf0383f",
            "private_ip": "10.0.0.113",
            "public_ip": "18.211.44.19",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-056461a9b1adf47e8",
            "tags": {
              "Name": "dev-nat-0"
            },
            "tags_all": {
              "Name": "dev-nat-0"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-084fb58561e15ca0f",
            "association_id": "eipassoc-0aba98e21c2c0c4f8",
            "connectivity_type": "public",
            "id": "nat-00da20e6fed685bc2",
            "network_interface_id": "eni-0f677643b1d1c36a1",
            "private_ip": "10.0.1.74",
            "public_ip": "98.86.24.167",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-073ee7cfc240acc45",
            "tags": {
              "Name": "dev-nat-1"
            },
            "tags_all": {
              "Name": "dev-nat-1"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3a2eaf5cb00dfb7",
            "association_id": "eipassoc-01e4d6d08c0e13751",
            "connectivity_type": "public",
            "id": "nat-09588e95cd9500e6e",
            "network_interface_id": "eni-0db0b631ff22ddc24",
            "private_ip": "10.0.2.227",
            "public_ip": "54.156.176.83",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0238ee3c10f5f1ffe",
            "tags": {
              "Name": "dev-nat-2"
            },
            "tags_all": {
              "Name": "dev-nat-2"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.nat.aws_eip.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:route-table/rtb-0c79528aa81ed55d2",
            "id": "rtb-0c79528aa81ed55d2",
            "owner_id": "319319364341",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0405cd045823eaa64",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-rt-private-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rt-private-0"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this",
            "module.firewall.aws_networkfirewall_firewall_policy.this",
            "module.firewall.aws_networkfirewall_rule_group.stateful",
            "module.firewall.aws_networkfirewall_rule_group.stateless",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:route-table/rtb-0c3978966525ce078",
            "id": "rtb-0c3978966525ce078",
            "owner_id": "319319364341",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0a33873a74b33b7b6",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-rt-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rt-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this",
            "module.firewall.aws_networkfirewall_firewall_policy.this",
            "module.firewall.aws_networkfirewall_rule_group.stateful",
            "module.firewall.aws_networkfirewall_rule_group.stateless",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:route-table/rtb-0fbb89d639a1196ae",
            "id": "rtb-0fbb89d639a1196ae",
            "owner_id": "319319364341",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "vpce-0f60d9b8e08d4609c",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "dev-rt-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-rt-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this",
            "module.firewall.aws_networkfirewall_firewall_policy.this",
            "module.firewall.aws_networkfirewall_rule_group.stateful",
            "module.firewall.aws_networkfirewall_rule_group.stateless",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.routes",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9c173451ecd143a",
            "region": "us-east-1",
            "route_table_id": "rtb-0c79528aa81ed55d2",
            "subnet_id": "subnet-020212739df257b93"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this",
            "module.firewall.aws_networkfirewall_firewall_policy.this",
            "module.firewall.aws_networkfirewall_rule_group.stateful",
            "module.firewall.aws_networkfirewall_rule_group.stateless",
            "module.routes.aws_route_table.private",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09100966d7b0bfc3b",
            "region": "us-east-1",
            "route_table_id": "rtb-0c3978966525ce078",
            "subnet_id": "subnet-0f798102fedbd62a3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this",
            "module.firewall.aws_networkfirewall_firewall_policy.this",
            "module.firewall.aws_networkfirewall_rule_group.stateful",
            "module.firewall.aws_networkfirewall_rule_group.stateless",
            "module.routes.aws_route_table.private",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0850f2c0897774565",
            "region": "us-east-1",
            "route_table_id": "rtb-0fbb89d639a1196ae",
            "subnet_id": "subnet-09fe253181a930b9d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.firewall.aws_networkfirewall_firewall.this",
            "module.firewall.aws_networkfirewall_firewall_policy.this",
            "module.firewall.aws_networkfirewall_rule_group.stateful",
            "module.firewall.aws_networkfirewall_rule_group.stateless",
            "module.routes.aws_route_table.private",
            "module.vpc.aws_subnet.firewall",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:internet-gateway/igw-08914e99162fbe2f6",
            "id": "igw-08914e99162fbe2f6",
            "owner_id": "319319364341",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08914e99162fbe2f6",
            "id": "r-rtb-07de53ccd3fc5c29f1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-07de53ccd3fc5c29f",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:route-table/rtb-07de53ccd3fc5c29f",
            "id": "rtb-07de53ccd3fc5c29f",
            "owner_id": "319319364341",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-064e96bd8d9acb426",
            "region": "us-east-1",
            "route_table_id": "rtb-07de53ccd3fc5c29f",
            "subnet_id": "subnet-056461a9b1adf47e8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f44b280365fd6a3a",
            "region": "us-east-1",
            "route_table_id": "rtb-07de53ccd3fc5c29f",
            "subnet_id": "subnet-073ee7cfc240acc45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0291efaf4eb0aa1af",
            "region": "us-east-1",
            "route_table_id": "rtb-07de53ccd3fc5c29f",
            "subnet_id": "subnet-0238ee3c10f5f1ffe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-0c229a52616af1661",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c229a52616af1661",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-fw-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-fw-0"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-046b62053b04f7c63",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046b62053b04f7c63",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-fw-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-fw-1"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-0827d9f6aa69bd7d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0827d9f6aa69bd7d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-fw-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-fw-2"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-020212739df257b93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-020212739df257b93",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-0"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-0f798102fedbd62a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f798102fedbd62a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-1"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-09fe253181a930b9d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fe253181a930b9d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-private-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-private-2"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-056461a9b1adf47e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-056461a9b1adf47e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-0"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-0"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-073ee7cfc240acc45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-073ee7cfc240acc45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-1"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:subnet/subnet-0238ee3c10f5f1ffe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0238ee3c10f5f1ffe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "319319364341",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-public-2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-public-2"
            },
            "vpc_id": "vpc-0aa007605209a718c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:319319364341:vpc/vpc-0aa007605209a718c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c600a4a67b12070e",
            "default_route_table_id": "rtb-0412a9ecca9ffb507",
            "default_security_group_id": "sg-072e5f5f4c28d719b",
            "dhcp_options_id": "dopt-07b8ff4e539f31159",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aa007605209a718c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0412a9ecca9ffb507",
            "owner_id": "319319364341",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}